--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ diskcache~=5.6.3
 yaml~=0.2.5
 click~=8.1.8
 matplotlib~=3.10.3
-seaborn~=0.13.2
-goatools~=1.4.12
 scipy~=1.15.3
 statsmodels~=0.14.4
+protobuf~=5.29.5
+openpyxl~=3.1.5
+networkx~=3.5
+upsetplot~=0.9.0
