--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
-﻿requests~=2.32.3
+﻿pydantic~=2.11.7
+typing-extensions~=4.14.0
+packaging~=25.0
+requests~=2.32.3
 tqdm~=4.67.1
 gffutils~=0.13
 pandas~=2.2.3
 pyyaml~=6.0.2
+google-generativeai~=0.8.5
 numpy~=2.0.1
 customtkinter~=5.2.2
 pillow~=11.1.0
 diskcache~=5.6.3
-yaml~=0.2.5
 click~=8.1.8
 matplotlib~=3.10.3
-scipy~=1.15.3
 statsmodels~=0.14.4
 protobuf~=5.29.5
 openpyxl~=3.1.5
