--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,64 +1,53 @@
-# pyproject.toml
-
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
-
 [project]
-name = "cotton-toolkit"
-version = "0.0.1" # 您可以根据需要更新版本号
+name = "friendly-cotton-genomes-toolkit"
+version = "1.0.0"
 authors = [
-    { name = "<您的名字>", email = "gkoishi0514@gmail.com" },
+  { name="Liu Junchen", email="gkoishi0514@gmail.com" },
 ]
-description = "一个用于棉花基因组分析和数据整合的图形化工具包"
+description = "A modern toolkit for cotton genomics research."
 readme = "README.md"
-requires-python = ">=3.8"
-
-license = "Apache-2.0"          # 使用标准的 SPDX 许可证标识符
-license-files = ["LICENSE"]     # 指向包含完整许可证文本的文件
-
-keywords = ["bioinformatics", "cotton", "genomics", "bsa", "hvg", "gui"]
-
+requires-python = ">=3.9"
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
-    # "License :: OSI Approved :: Apache Software License", # 这一行可以被上面的 license 字段取代，可以移除
-    "Operating System :: Microsoft :: Windows",
+    "Natural Language :: Chinese (Simplified)",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Topic :: Scientific/Engineering :: Bio-Informatics",
-    "Environment :: Win32 (MS Windows)",
-    "Natural Language :: Chinese (Simplified)",
 ]
-
 dependencies = [
-    "pandas>=1.3",
-    "PyYAML>=6.0",
-    "requests>=2.20",
-    "tqdm>=4.60",
-    "gffutils>=0.10",
-    "openpyxl>=3.0",
-    "customtkinter>=5.2.0",
-    "numpy>=1.20",
+    "pydantic~=2.11.7",
+    "requests~=2.32.3",
+    "tqdm~=4.67.1",
+    "gffutils~=0.13",
+    "pandas~=2.2.3",
+    "pyyaml~=6.0.2",
+    "numpy~=2.0.1",
+    "pillow~=10.4.0",
+    "diskcache~=5.6.3",
+    "click~=8.1.8",
+    "matplotlib~=3.10.3",
+    "statsmodels~=0.14.4",
+    "protobuf~=5.29.5",
+    "openpyxl~=3.1.5",
+    "networkx~=3.5",
+    "upsetplot~=0.9.0",
+    "ttkbootstrap~=1.13.12",
+    "scipy~=1.16.0",
 ]
-
 
 [project.urls]
-# "Homepage" = "https://github.com/<your-username>/CottonToolkit"
-# "Bug Tracker" = "https://github.com/<your-username>/CottonToolkit/issues"
-
+"Homepage" = "https://github.com/PureAmaya/Friendly-Cotton-Genomes-Toolkit"
 
 [project.scripts]
-cotton-toolkit = "cotton_toolkit.cli:cli_main_entry"
-
-
-[project.gui-scripts]
-cotton-toolkit-gui = "main:main"
-
+fcgt = "cotton_toolkit.cli:cli"
 
 [tool.setuptools]
 packages = ["cotton_toolkit"]
+
+[tool.setuptools.package-data]
+"cotton_toolkit" = ["locales/*/LC_MESSAGES/*.mo"]
