调整打包逻辑

--- a/pixi.toml
+++ b/pixi.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 
 [tasks]
 start = "python main.py"
-build:win = """
+build-win = """
 python -m nuitka \
     --standalone \
     --mingw64 \
@@ -17,28 +17,20 @@ python -m nuitka \
     --plugin-enable=anti-bloat \
     --lto=yes \
     --include-data-dir=ui/assets=ui/assets \
-    --include-data-files=cotton_toolkit/locales/translator.py=cotton_toolkit/locales \
-    --include-data-files=cotton_toolkit/locales/*.po=cotton_toolkit/locales \
-    --include-data-files=cotton_toolkit/locales/*.mo=cotton_toolkit/locales \
-    --include-data-files=cotton_toolkit/locales/pixi.toml=cotton_toolkit/locales \
-    --include-data-files=cotton_toolkit/locales/pixi.lock=cotton_toolkit/locales \
+    --include-data-files="cotton_toolkit/locales/*.po=..." \
     --include-package-data=ttkbootstrap \
     --output-dir=dist \
     main.py
 """
 
-build:linux = """
+build-linux = """
 python -m nuitka \
     --standalone \
     --plugin-enable=tk-inter \
     --plugin-enable=anti-bloat \
     --lto=yes \
     --include-data-dir=ui/assets=ui/assets \
-    --include-data-files=cotton_toolkit/locales/translator.py=cotton_toolkit/locales \
     --include-data-files=cotton_toolkit/locales/*.po=cotton_toolkit/locales \
-    --include-data-files=cotton_toolkit/locales/*.mo=cotton_toolkit/locales \
-    --include-data-files=cotton_toolkit/locales/pixi.toml=cotton_toolkit/locales \
-    --include-data-files=cotton_toolkit/locales/pixi.lock=cotton_toolkit/locales \
     --include-package-data=ttkbootstrap \
     --output-dir=dist \
     main.py
