--- a/pixi.toml
+++ b/pixi.toml
@@ -19,6 +19,7 @@ python -m nuitka \
     --include-data-dir=ui/assets=ui/assets \
     --include-data-dir=cotton_toolkit/locales=cotton_toolkit/locales \
     --include-package-data=ttkbootstrap \
+    --include-package=Bio.SearchIO \
     --output-dir=dist \
     main.py
 """
@@ -30,8 +31,9 @@ python -m nuitka \
     --plugin-enable=anti-bloat \
     --lto=yes \
     --include-data-dir=ui/assets=ui/assets \
-    --include-data-files=cotton_toolkit/locales/*.po=cotton_toolkit/locales \
+    --include-data-dir=cotton_toolkit/locales=cotton_toolkit/locales \
     --include-package-data=ttkbootstrap \
+    --include-package=Bio.SearchIO \
     --output-dir=dist \
     main.py
 """
